--- a/README.org
+++ b/README.org
@@ -1,15 +1,23 @@
 * GO OpenSearch
+  A self-contained OpenSearch broker and suggests server using BBOP JS
+  and the GOlr backend. Designed to integrate with AmiGO 2.
 
-  A self-contained OpenSearch server using BBOP JS and the GOlr
-  backed. Designed to integrate with AmiGO 2. Deployed on OpenShift.
-
-  The response times seem to be just slow enough when deployed on
-  OpenShift the the easier/smaller responses are dropped by the time
-  they come back (no display)
+  It may be deployed on OpenShift, Heroku, or run locally. The
+  response times seem to be just slow enough when deployed on
+  OpenShift or Heroku the the easier/smaller responses are dropped by
+  the time they come back (no display).
 
   The public (non-deployment) repo is at:
   https://github.com/kltm/go-opensearch
-** Testing
-   % node server.js
 ** Deployment
-   Push to OpenShift.
+*** OpenShift
+    git push origin master
+    http://amigoopensearch-genkisugi.rhcloud.com
+*** Heroku
+**** Remote
+     git push heroku master
+     http://frozen-hamlet-7492.herokuapp.com
+**** Local
+    % foreman start
+*** Local
+    % node server.js
